# hush

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: audit.yml  ci.yml  release.yml
src/: cli.rs  config.rs  config_tests.rs  daemon.rs  error.rs  error_tests.rs  guard.rs  guard_tests.rs  main.rs
src/cleaner/: apps.rs  cache.rs  ops.rs  ops_tests.rs  snapshots.rs  system.rs
src/optimizer/: network.rs  system.rs  ui.rs
src/sentinel/: notifications.rs  processes.rs  silence.rs
tests/: integration.rs
